--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             let savedAffirmations = JSON.parse(localStorage.getItem('savedAffirmations') || '[]');
             let currentFontSize = 100;
 
-            // Placeholder for backend URL (to be set after Step 3)
+            // backend url (public view)
             const BACKEND_URL = 'https://affirmai-backend.vercel.app/generate-affirmation';
 
             form.addEventListener('submit', async (e) => {
